Fixed Scroll to top issue, check stackoverflow for resolution
https://github.com/gatsbyjs/gatsby/issues/7454

--- a/src/components/scss/_partials/base.scss
+++ b/src/components/scss/_partials/base.scss
@@ -14,18 +14,18 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 
 html{
-	height: 100%;
+	height: initial;
 }
 
 body{
-	height: 100%;
+  height: 100%;
   background-color: $grey;
   font-family: 'Montserrat',Arial,sans-serif;
   font-weight: 300;
   font-size: 1rem;
   line-height: 1;
   -webkit-tap-highlight-color: transparent;
-	overflow-x: hidden;
+//   overflow-x: hidden;
 }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
